--- a/src/client/components/switch/style.css
+++ b/src/client/components/switch/style.css
@@ -8,6 +8,7 @@
 }
 
 .nativeControl {
+  cursor: inherit;
   height: inherit;
   opacity: 0;
   position: absolute;
@@ -25,7 +26,7 @@
   position: absolute;
   width: 1.6em;
   top: 0;
-  transition: all 250ms cubic-bezier(0.22, 0.61, 0.36, 1) 0ms;
+  transition: transform 250ms cubic-bezier(0.22, 0.61, 0.36, 1) 0ms;
 }
 
 .thumbOff {
@@ -34,7 +35,7 @@
 
 .thumbOn {
   background-color: #1197D3;
-  left: 1.3em;
+  transform: translateX(1.3em);
 }
 
 .track {
@@ -42,7 +43,6 @@
   height: 1.1em;
   width: inherit;
   position: relative;
-  transition: background-color 250ms cubic-bezier(0.22, 0.61, 0.36, 1) 0ms;
 }
 
 .trackOff {
