--- a/src/client/components/localisation/style.css
+++ b/src/client/components/localisation/style.css
@@ -47,6 +47,12 @@
   position: relative;
 }
 
+.localisation__canvasInnerContainer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 .localisation__canvas {
   width: 100%;
   height: 100%;
