Add single robot selector (NUbots/NUsight2#238)
* Add RobotSelectorSingle

* Add stories

* remove view model and internal state

* remove className prop

--- a/src/client/components/dropdown/style.css
+++ b/src/client/components/dropdown/style.css
@@ -4,7 +4,6 @@
 
 .dropdownMenu {
   position: absolute;
-  top: 100%;
   z-index: 1;
 }
 
@@ -14,4 +13,12 @@
 
 .dropdownMenuRight {
   right: 0;
+}
+
+.dropdownMenuUp {
+  bottom: 100%;
+}
+
+.dropdownMenuDown {
+  top: 100%;
 }
