Add robot connection indicator (NUbots/NUsight2#268)
* Add robot_selector story

* Add connection indicator

--- a/src/client/components/robot_selector/style.css
+++ b/src/client/components/robot_selector/style.css
@@ -84,6 +84,22 @@
   cursor: pointer;
 }
 
+.robotConnectionIndicator {
+  box-sizing: border-box;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  margin-right: 0.75em;
+}
+
+.robotConnected {
+  background-color: #00de46;
+}
+
+.robotDisconnected {
+  border: 2px solid #ccc;
+}
+
 .robotLabel {
   margin-right: 1em;
   white-space: nowrap;
