Improve resizing logic in Three component (NUbots/NUsight2#286)
* Introduce aspect ratio enforcing with cover and contain modes.
* Favour using CSS property object-fit over manual JavaScript resizing.
* Debounce re-renders to improve performance.
* Reduce unnecessary container elements.
* Switch to use react-measure.

--- a/src/client/components/three/styles.css
+++ b/src/client/components/three/styles.css
@@ -1,9 +1,6 @@
-.container {
+.canvas {
+  position: absolute;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-}
-
-.canvas {
   display: block;
 }
