Change column width of panel to be consistent across robots

--- a/nusight2/src/client/components/robot_selector/robot_label/style.css
+++ b/nusight2/src/client/components/robot_selector/robot_label/style.css
@@ -61,9 +61,9 @@
 
 .dataTable {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 170px 170px;
   grid-template-rows: 1fr 1fr;
-  grid-column-gap: 30px;
+  grid-column-gap: 8px;
   grid-row-gap: 8px;
   border: none;
   border-top: 1px solid #eee;
