--- a/nusight2/src/client/components/reactions/odometry_visualizer/styles.css
+++ b/nusight2/src/client/components/reactions/odometry_visualizer/styles.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  text-align: left;
 }
 
 .legend {
@@ -16,7 +17,7 @@
 
 .item {
   display: flex;
-  align-items: center;
+  align-items: left;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   padding: 16px;
