--- a/nusight2/src/client/components/reactions/styles.css
+++ b/nusight2/src/client/components/reactions/styles.css
@@ -4,7 +4,7 @@
 
   display: flex;
   flex-direction: column;
-  text-align: center;
+  text-align: left;
   position: relative;
   width: 100%;
   height: 100%;
@@ -20,4 +20,5 @@
 .content {
   flex-grow: 1;
   position: relative;
+  text-align: left;
 }
