Show names on cameras in NUsight

--- a/nusight2/src/client/components/vision/camera/styles.css
+++ b/nusight2/src/client/components/vision/camera/styles.css
@@ -10,3 +10,16 @@
   top: 0;
   right: 0;
 }
+
+.cameraName {
+  position: absolute;
+  top: 8px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 8px;
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  font-size: 14px;
+  line-height: 1;
+}
